static/index.css
* {
	box-sizing: border-box;
}

#entries {
	width: 100%;
	border: 0;
	border-collapse: collapse;
	line-height: 1.5;
}

a.has-preview {
	text-decoration-style: double;
}

.entry-name {
	text-align: left;
}

.entry-size,
.entry-mtime {
	text-align: right;
}

#entries tbody tr:nth-child(odd) {
	background-color: #eee;
}

#entries td,
#entries tr {
	padding-left: 0.2rem;
	padding-right: 0.2rem;
}

#entries th a {
	color: inherit;
}

.entry-thumbnail {
	width: 1rem;
	white-space: nowrap;
}

.entry-thumbnail img {
	max-height: 2ex;
	max-width: 2ex;
	overflow: visible;
	display: block;
}

#entries th.sort_ascending::after {
	content: " ^";
	font-weight: normal;
}

#entries th.sort_descending::after {
	content: " v";
	font-weight: normal;
}

#preview {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: #000a;
	backdrop-filter: blur(2px);
	flex-direction: column;
	align-items: stretch;
	justify-content: stretch;
	padding: 0;
	margin: 0;
}

#preview.open {
	display: flex;
}

#previewItemContainer {
	flex: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	position: relative;
	margin: 1rem;
}

#previewItem {
	max-width: 100%;
	max-height: 100%;
}

#previewBar {
	background: #444;
	padding: 0.4rem;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	gap: 0.4rem;
	color: #eee;
}

#previewBar button {
	height: 2rem;
	width: 2rem;
	padding: 0;
	position: relative;
}

#previewBar button img {
	max-width: 100%;
	max-height: 100%;
}

